# cuFHEDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/HEDB/comparison/: HomCompare.h  extract_msb.cpp  tfhepp_utils.cpp
src/cuHEDB/: CMakeLists.txt  HomCompare_gpu.cuh  comparable_gpu.cuh  gatebootstrap_gpu.cuh  msb_gpu.cuh
src/cuHEDB/fft_gpu/: BlindRotate_gpu.cuh  ExternalProduct_gpu.cuh  cufft_gpu.cuh  fft_gpu.cuh
src/cuHEDB/test/: HomCompare.cuh  cufft.cuh  gatebootstrap.cuh  msb.cuh
test/: Bootstrapping.cu  CMakeLists.txt  ExternalProduct.cu  GenKey.cu  cuFFT.cu  kernelFusion.cu
test/Arc_Query/: TPCH_Q1.cu  TPCH_Q12.cu  TPCH_Q14.cu  TPCH_Q6.cu  comparable.cu  fastR.h  fft_res.txt  relational_queries_test.cpp  test.cu  test1.cu
test/HE3_Query/: HomComp.cu  TPCH_Q1.cu  TPCH_Q12.cu  TPCH_Q14.cu  TPCH_Q17.cu  TPCH_Q4.cu  TPCH_Q6.cu  fft_res.txt  test1.cu
test/Query/: TPCH_Q1.cu  TPCH_Q12.cu  TPCH_Q14.cu  TPCH_Q17.cu  TPCH_Q4.cu  TPCH_Q6.cu  fastR.h  test.cpp
